# Secure-Media-Gateway

./: .gitignore  capacitor.config.ts  how to run.md  index.html  package-lock.json  package.json  run.bat  supabase_setup.md  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  tauri-build.yml
backend/: package-lock.json  package.json  server.js
public/: 404.html  manifest.json  sw.js
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AdminDashboard.tsx  Login.tsx  PasswordModal.tsx  UploadForm.tsx  Viewer.tsx
src/context/: LanguageContext.tsx
src/lib/: ai.ts
