[package]
name = "secure-gateway"
version = "0.1.0"
description = "Secure Media Gateway Desktop"
authors = ["ByteForge"]
license = "MIT"
repository = "https://github.com/ByteForgeReal/Secure-Media-Gateway"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
# by default Tauri runs in the browser-based environment
# this feature enables the native-standard environment
custom-protocol = [ "tauri/custom-protocol" ]
